# skyrc-gsm015

./: .gitignore  LICENSE  README.md  igc.py  parse.py  protocol_notes.md  pyproject.toml  read.py  responses.md  skyrc_gsm015.py  skyrc_usb.py
src/skyrc_gsm015/: igc.py  parse.py  skyrc_gsm015.py
